Thank you spaceships for this commit

--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Microsoft Code Contest - Oct 25 2013
+Microsoft Code Contest SPACESHIPS WAS HERE - Oct 25 2013
 ====================================
 
 Team: Penguins
